Adds facete grid for vaadin view